# MilkCat-legacy

./: .gitignore  COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  ar-lib  compile  config.guess  config.h.in  config.h.in~  config.sub  configure  configure.ac  depcomp  index.html  install-sh  milkcat  milkcat.gyp  missing  params.json
data/: Makefile.am  Makefile.in  default_tag.cfg  default_tag.cfg~  oov_property.idx
src/: Makefile.am  Makefile.in  bigiram_segmenter.h  bigram_segmenter.cc  bigram_segmenter.h  configuration.cc  configuration.h  crf_model.cc  crf_model.h  crf_part_of_speech_tagger.cc  crf_part_of_speech_tagger.h  crf_pos_tagger.cc  crf_pos_tagger.h  crf_segmenter.cc  crf_segmenter.h  crf_tagger.cc  crf_tagger.h  crfpp_model.cc  crfpp_model.h  crfpp_tagger.cc  crfpp_tagger.h  darts.h  feature_extractor.cc  feature_extractor.h  hmm_model.cc  hmm_model.h  hmm_part_of_speech_tagger.cc  hmm_part_of_speech_tagger.h  hmm_segment_and_pos_tagger.cc  hmm_segment_and_pos_tagger.h  instance.h  instance_data.cc  instance_data.h  libmilkcat.cc  main.c  make_bigram_model.cc  mctools.cc  milkcat  milkcat.h  milkcat_config.h  (+36 more)
src/common/: get_vocabulary.cc
src/milkcat/: beam.h  bigram_segmenter.cc  bigram_segmenter.h  configuration.cc  configuration.h  crf_model.cc  crf_model.h  crf_part_of_speech_tagger.cc  crf_part_of_speech_tagger.h  crf_segmenter.cc  crf_segmenter.h  crf_tagger.cc  crf_tagger.h  feature_extractor.h  hmm_model.cc  hmm_model.h  hmm_part_of_speech_tagger.cc  hmm_part_of_speech_tagger.h  instance_data.cc  instance_data.h  libmilkcat.cc  libmilkcat.h  milkcat.h  milkcat_config.h  mixed_part_of_speech_tagger.cc  mixed_part_of_speech_tagger.h  mixed_segmenter.cc  mixed_segmenter.h  out_of_vocabulary_word_recognition.cc  out_of_vocabulary_word_recognition.h  part_of_speech_tag_instance.cc  part_of_speech_tag_instance.h  part_of_speech_tagger.h  segmenter.h  static_array.h  static_hashtable.h  term_instance.cc  term_instance.h  token.l  token_instance.cc  (+7 more)
src/neko/: bigram_anal.cc  bigram_anal.h  candidate.cc  candidate.h  crf_vocab.cc  crf_vocab.h  final_rank.cc  final_rank.h  maxent_classifier.cc  maxent_classifier.h  mutual_information.cc  mutual_information.h  utf8.h
src/utils/: readable_file.cc  readable_file.h  status.h  strlcpy.cc  utils.cc  utils.h  writable_file.cc  writable_file.h
swig/: milkcat.i
swig/python/: milkcat.py  milkcat_raw.py  milkcat_wrap.c  setup.py
